Archive2/a1/cc2bc1554ba933/output
main.cpp:1:1: error: stray '\303' in program
 / / En-tête fichier 
 ^
main.cpp:1:1: error: stray '\252' in program
main.cpp:4:1: error: stray '\303' in program
 / / fonction incluse dans plusieurs fichiers source doit être en ligne 
 ^
main.cpp:4:1: error: stray '\252' in program
main.cpp:11:20: error: stray '#' in program
 / / Fichier source # 2 
                    ^
main.cpp:12:23: fatal error: example.h: No such file or directory
 # include "example.h" 
                       ^
compilation terminated.
